fixtures/invalid/loose-text.mu
# Broken

This loose paragraph is invalid because v0 requires typed blocks.